--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "gsap": "^3.12.1",
+    "locomotive-scroll": "^5.0.0-beta.8",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
