--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.0.0",
     "react-dom": "18.2.0",
     "sanity": "^3.15.1",
+    "sanity-plugin-iframe-pane": "^2.5.7",
     "styled-components": "6.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
